--- a/page5.html
+++ b/page5.html
@@ -1,411 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Page 5 — Surprise</title>
+  <meta charset="UTF-8">
+  <title>Happy Birthday</title>
   <style>
-    :root{
-      --bg:#000;
-      --accent:#ff4da6;
-    }
-    html,body{height:100%;margin:0;background:var(--bg);font-family:Inter,Arial,Helvetica,sans-serif;color:#fff}
-    /* Top text (big + bold + gradient) */
-    .top-text{
-      width:100%;
-      text-align:center;
-      padding:18px 10px 6px;
-      box-sizing:border-box;
-      font-weight:800;
-      font-size:1.6rem;
-      line-height:1.1;
-      letter-spacing:.2px;
-      background:linear-gradient(90deg,#ff4da6,#b366ff,#4dd2ff);
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-      text-shadow:0 6px 16px rgba(0,0,0,.6);
+    body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      color: white;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
     }
 
-    /* center stage */
-    .stage {
+    /* Top Text */
+    .top-text {
+      font-size: 28px;
+      font-weight: bold;
+      text-align: center;
+      color: #fff;  /* emojis stay original */
+      line-height: 1.6;
+      margin-top: 20px;
+    }
+
+    /* Cube wrapper */
+    .slideshow {
+      width: 720px;
+      height: 720px;
+      margin: 40px auto;
+      perspective: 1200px;
+    }
+
+    .cube {
+      width: 100%;
+      height: 100%;
       position: relative;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      min-height:calc(100vh - 240px);
-      pointer-events:none; /* allow clicks through floating stuff */
+      transform-style: preserve-3d;
+      animation: rotate 18s infinite linear;
     }
 
-    /* cube scene (720x720 requested). Responsive scale on small screens) */
-    .scene {
-      width:720px;
-      height:720px;
-      perspective:1500px;
-      pointer-events:none;
-    }
-    @media (max-width:820px){
-      .scene{width:420px;height:420px}
-    }
-    @media (max-width:420px){
-      .scene{width:320px;height:320px}
-    }
-
-    .cube{
-      width:100%;
-      height:100%;
-      position:relative;
-      transform-style:preserve-3d;
-      margin:0 auto;
-      /* rotate animation */
-      animation:spinCube 18s linear infinite;
-      pointer-events:none;
-    }
-
-    .face{
-      position:absolute;
-      width:100%;
-      height:100%;
-      background-size:cover;
-      background-position:center;
-      backface-visibility: hidden;
-      border-radius:8px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.6), inset 0 0 60px rgba(255,255,255,0.02);
-    }
-
-    /* set face transforms: translateZ = half of width (responsive with CSS calc) */
-    /* We'll use JS to set exact translateZ value on load so faces match exact half of computed size. */
-
-    @keyframes spinCube {
-      from { transform: rotateX(0deg) rotateY(0deg); }
-      to   { transform: rotateX(360deg) rotateY(360deg); }
-    }
-
-    /* quiz at bottom */
-    .quiz {
+    .cube img {
       position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      bottom: 34px;
-      width: min(720px, 94%);
-      max-width: 720px;
-      text-align:center;
-      pointer-events: auto;
+      width: 720px;
+      height: 720px;
+      object-fit: cover;
+      backface-visibility: hidden;
     }
-    .quiz p{
-      margin:0 0 10px;
-      font-size:1.05rem;
-      opacity:0.95;
+
+    .front  { transform: rotateY(0deg) translateZ(360px); }
+    .back   { transform: rotateY(180deg) translateZ(360px); }
+    .right  { transform: rotateY(90deg) translateZ(360px); }
+    .left   { transform: rotateY(-90deg) translateZ(360px); }
+    .top    { transform: rotateX(90deg) translateZ(360px); }
+    .bottom { transform: rotateX(-90deg) translateZ(360px); }
+
+    @keyframes rotate {
+      from { transform: rotateX(0) rotateY(0); }
+      to { transform: rotateX(360deg) rotateY(360deg); }
     }
-    .answer-input{
-      width: 60%;
-      min-width:180px;
-      max-width:420px;
-      padding:10px 14px;
-      font-size:1rem;
-      border-radius:8px;
+
+    /* Quiz */
+    .quiz {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .quiz input {
+      padding: 10px;
+      font-size: 18px;
+      border-radius: 5px;
       border: none;
-      outline: none;
-      box-shadow: 0 6px 18px rgba(0,0,0,.6);
-      text-align:center;
+      width: 250px;
+      text-align: center;
     }
-    .submit-btn{
-      display:inline-block;
-      margin-top:12px;
-      padding:10px 20px;
-      border-radius:10px;
-      background:var(--accent);
-      color:#fff;
-      border:none;
-      cursor:pointer;
-      font-weight:700;
-      font-size:1rem;
-    }
-    .submit-btn:active{transform:translateY(1px)}
-
-    /* floating emojis */
-    .floating-emoji{
-      position:fixed;
-      font-size:28px;
-      z-index:10;
-      pointer-events:none;
-      will-change: transform, opacity;
+    .quiz button {
+      padding: 10px 20px;
+      font-size: 18px;
+      margin-left: 10px;
+      border: none;
+      background: #ff007f;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
-    /* fireworks canvas covers */
-    #fw {
-      position:fixed;
-      inset:0;
-      z-index:3;
-      pointer-events:none;
+    /* Floating Emojis */
+    .emoji {
+      position: absolute;
+      font-size: 32px;
+      animation: float 8s infinite;
     }
-    /* confetti canvas */
-    #conf {
-      position:fixed;
-      inset:0;
-      z-index:4;
-      pointer-events:none;
+
+    @keyframes float {
+      from { transform: translateY(100vh) scale(1); opacity: 1; }
+      to { transform: translateY(-10vh) scale(1.2); opacity: 0; }
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <!-- autoplay music (may be blocked by autoplay policy on some browsers) -->
-  <audio id="bgSong" src="First.mp3" loop autoplay></audio>
 
+  <!-- Background Song -->
+  <audio autoplay loop>
+    <source src="First.mp3" type="audio/mpeg">
+  </audio>
+
+  <!-- Top Text -->
   <div class="top-text">
-    Namma 1st Selfie loosuu😚🙈, 
-    Always blessed to have you in my Life 🤗...
-    Lov uuu😚 always...
+    <b>Namma 1st Selfie loosuu😚🙈</b><br>
+    <b>Always blessed to have you in my Life 🤗</b><br>
+    <b>Lov uuu😚 always...</b>
   </div>
 
-  <div class="stage" aria-hidden="true">
-    <div class="scene" id="scene">
-      <div class="cube" id="cube">
-        <div class="face face1" id="face1" style="background-image:url('F1.jpg')"></div>
-        <div class="face face2" id="face2" style="background-image:url('F2.jpg')"></div>
-        <div class="face face3" id="face3" style="background-image:url('F3.jpg')"></div>
-        <div class="face face4" id="face4" style="background-image:url('F4.jpg')"></div>
-        <div class="face face5" id="face5" style="background-image:url('F5.jpg')"></div>
-        <div class="face face6" id="face6" style="background-image:url('F6.jpg')"></div>
-      </div>
+  <!-- Rotating Cube -->
+  <div class="slideshow">
+    <div class="cube">
+      <img src="F1.jpg" class="front">
+      <img src="F2.jpg" class="back">
+      <img src="F3.jpg" class="right">
+      <img src="F4.jpg" class="left">
+      <img src="F5.jpg" class="top">
+      <img src="F6.jpg" class="bottom">
     </div>
   </div>
 
-  <!-- quiz -->
+  <!-- Quiz -->
   <div class="quiz">
-    <p><strong>Next page ku porathukku unnoda loosu ku more than 10 hug kudu 🫂...</strong></p>
-    <input id="answer" class="answer-input" placeholder="Type hugs here... (🫂🫂🫂... )" autocomplete="off" />
-    <br>
-    <button class="submit-btn" id="submitBtn">Submit</button>
+    <p>Next page ku porathukku unnoda loosu ku more than 10 hug kudu 🫂...</p>
+    <input type="text" id="answer" placeholder="Type hugs here...">
+    <button onclick="checkAnswer()">Submit</button>
   </div>
 
-  <!-- fireworks and confetti canvas -->
-  <canvas id="fw"></canvas>
-  <canvas id="conf"></canvas>
+  <!-- Fireworks + Confetti -->
+  <canvas id="confetti"></canvas>
 
-<script>
-/* ========= Responsive face translateZ setup ========= */
-/* Make cube faces translateZ = half of computed scene width */
-(function setupFaces(){
-  function applyTransforms(){
-    const scene = document.getElementById('scene');
-    const cube = document.getElementById('cube');
-    const faces = document.querySelectorAll('.face');
-    const rect = scene.getBoundingClientRect();
-    const size = Math.round(rect.width);
-    const tz = Math.round(size / 2);
-    // set inline transforms for each face using translateZ(tz)
-    document.getElementById('face1').style.transform = `rotateY(0deg) translateZ(${tz}px)`;
-    document.getElementById('face2').style.transform = `rotateY(90deg) translateZ(${tz}px)`;
-    document.getElementById('face3').style.transform = `rotateY(180deg) translateZ(${tz}px)`;
-    document.getElementById('face4').style.transform = `rotateY(-90deg) translateZ(${tz}px)`;
-    document.getElementById('face5').style.transform = `rotateX(90deg) translateZ(${tz}px)`;
-    document.getElementById('face6').style.transform = `rotateX(-90deg) translateZ(${tz}px)`;
-    // also ensure cube keeps center rotation (no extra translate)
-    cube.style.transformOrigin = 'center center';
-  }
-  window.addEventListener('load', applyTransforms);
-  window.addEventListener('resize', applyTransforms);
-})();
-/* ========= end cube setup ========= */
-
-
-/* ========= Floating emojis that spawn continuously ========= */
-(function floatingEmojis(){
-  const EMOJI = ["💙","🤗","😚","🫂","💎","❤️‍🩹","🙈"];
-  function spawn(){
-    const el = document.createElement('div');
-    el.className = 'floating-emoji';
-    el.innerText = EMOJI[Math.floor(Math.random()*EMOJI.length)];
-    el.style.left = (Math.random()*90) + 'vw';
-    el.style.top = (window.innerHeight + 40) + 'px'; // start below
-    const dur = 5 + Math.random()*6;
-    el.style.transition = `transform ${dur}s linear, opacity ${dur}s linear`;
-    document.body.appendChild(el);
-    // trigger movement (translateY negative)
-    requestAnimationFrame(() => {
-      el.style.transform = `translateY(-${window.innerHeight + 200}px)`;
-      el.style.opacity = '0';
-    });
-    setTimeout(()=> el.remove(), (dur*1000)+200);
-  }
-  // spawn faster initially
-  setInterval(spawn, 350);
-})();
-/* ========= end floating emojis ========= */
-
-
-/* ========= Fireworks (start automatically) ========= */
-(function fireworks(){
-  const canvas = document.getElementById('fw');
-  const ctx = canvas.getContext('2d');
-  function resize(){ canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
-  window.addEventListener('resize', resize);
-  resize();
-
-  // simple particle fireworks
-  class Particle {
-    constructor(x,y,color){
-      this.x = x; this.y = y;
-      this.vx = (Math.random()-0.5)*6;
-      this.vy = (Math.random()-0.5)*6;
-      this.life = 60 + Math.random()*40;
-      this.color = color;
-      this.size = 2 + Math.random()*3;
+  <script>
+    // Floating Emojis
+    const emojis = ["💙","🤗","😚","🫂","💎","❤️‍🩹","🙈"];
+    function createEmoji() {
+      const emoji = document.createElement("div");
+      emoji.className = "emoji";
+      emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
+      emoji.style.left = Math.random() * 100 + "vw";
+      emoji.style.top = Math.random() * 100 + "vh";
+      emoji.style.animationDuration = 5 + Math.random() * 5 + "s";
+      document.body.appendChild(emoji);
+      setTimeout(() => emoji.remove(), 8000);
     }
-    update(){
-      this.x += this.vx; this.y += this.vy;
-      this.vy += 0.06; // gravity
-      this.life--;
+    setInterval(createEmoji, 800);
+
+    // Quiz check
+    function checkAnswer() {
+      const ans = document.getElementById("answer").value.trim();
+      const correct = "🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂";
+      if (ans === correct) {
+        alert("Correct! Moving to next page 🎉");
+        window.location.href = "page6.html"; // update your next page
+      } else {
+        alert("Try again 💙");
+      }
     }
-    draw(){
-      ctx.beginPath();
-      ctx.fillStyle = this.color;
-      ctx.globalAlpha = Math.max(0, this.life/80);
-      ctx.arc(this.x, this.y, this.size, 0, Math.PI*2);
-      ctx.fill();
+
+    // Confetti + Fireworks
+    const canvas = document.getElementById('confetti');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const particles = [];
+    function random(min, max) {
+      return Math.random() * (max - min) + min;
     }
-  }
 
-  let particles = [];
-  function burst(x,y){
-    const hue = Math.floor(Math.random()*360);
-    for(let i=0;i<60;i++){
-      const c = `hsl(${hue + Math.random()*40},100%,60%)`;
-      particles.push(new Particle(x + (Math.random()-0.5)*10, y + (Math.random()-0.5)*10, c));
-    }
-  }
-
-  // auto bursts across top half regularly
-  setInterval(()=>{
-    const x = Math.random()*canvas.width;
-    const y = Math.random()*(canvas.height*0.45);
-    burst(x,y);
-  }, 900);
-
-  // animate
-  (function anim(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    for(let i=particles.length-1;i>=0;i--){
-      particles[i].update();
-      particles[i].draw();
-      if(particles[i].life<=0) particles.splice(i,1);
-    }
-    requestAnimationFrame(anim);
-  })();
-})();
-/* ========= end fireworks ========= */
-
-
-/* ========= Confetti (grand blasts on load + on success) ========= */
-(function confetti(){
-  const canvas = document.getElementById('conf');
-  const ctx = canvas.getContext('2d');
-  function resize(){ canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
-  window.addEventListener('resize', resize);
-  resize();
-
-  function rand(min,max){ return Math.random()*(max-min)+min; }
-
-  let confettiPieces = [];
-  function spawnConfettiBurst(count){
-    for(let i=0;i<count;i++){
-      confettiPieces.push({
-        x: rand(0,canvas.width),
-        y: rand(-50, -10),
-        vx: rand(-4,4),
-        vy: rand(2,6),
-        w: rand(6,12),
-        h: rand(8,16),
-        color: ['#ff4da6','#ffd166','#66ffea','#66b3ff','#b366ff'][Math.floor(Math.random()*5)],
-        rot: rand(0,Math.PI*2),
-        life: 200 + Math.random()*200
+    function createParticle() {
+      particles.push({
+        x: random(0, canvas.width),
+        y: canvas.height,
+        color: `hsl(${random(0, 360)},100%,50%)`,
+        size: random(4, 8),
+        speedY: random(3, 7),
+        speedX: random(-2, 2)
       });
     }
-  }
 
-  // initial grand blast when page opens:
-  window.addEventListener('load', ()=> spawnConfettiBurst(300) );
-
-  function draw(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    for(let i=confettiPieces.length-1;i>=0;i--){
-      const p = confettiPieces[i];
-      p.x += p.vx; p.y += p.vy; p.vy += 0.04; p.rot += 0.1; p.life--;
-      ctx.save();
-      ctx.translate(p.x,p.y);
-      ctx.rotate(p.rot);
-      ctx.fillStyle = p.color;
-      ctx.fillRect(-p.w/2, -p.h/2, p.w, p.h);
-      ctx.restore();
-      if(p.y > canvas.height + 50 || p.life <= 0) confettiPieces.splice(i,1);
+    function drawParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles.forEach((p, i) => {
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+        p.y -= p.speedY;
+        p.x += p.speedX;
+        if (p.y < 0) particles.splice(i, 1);
+      });
     }
-    requestAnimationFrame(draw);
-  }
-  draw();
 
-  // expose for later use
-  window.spawnConfettiBurst = spawnConfettiBurst;
-})();
-/* ========= end confetti ========= */
-
-
-/* ========= Quiz auto-check + submit handler ========= */
-(function quizLogic(){
-  const input = document.getElementById('answer');
-  const btn = document.getElementById('submitBtn');
-
-  function successTransition(){
-    // extra confetti + quick firework bursts
-    if(window.spawnConfettiBurst) window.spawnConfettiBurst(300);
-    // also trigger multiple fireworks bursts across screen:
-    const fwCanvas = document.getElementById('fw');
-    const fwRect = fwCanvas.getBoundingClientRect();
-    // small bursts
-    for(let i=0;i<6;i++){
-      const x = Math.random()*fwRect.width;
-      const y = Math.random()*fwRect.height*0.5;
-      // simulate small burst by calling internal burst if available:
-      // We don't expose burst function publicly; instead spawn confetti again as celebratory effect
-      if(window.spawnConfettiBurst) window.spawnConfettiBurst(60);
+    function loop() {
+      drawParticles();
+      requestAnimationFrame(loop);
     }
-    // after short delay navigate
-    setTimeout(()=> { window.location.href = 'page6.html'; }, 1800);
-  }
 
-  function checkValue(v){
-    const count = (v.match(/🫂/g) || []).length;
-    return count >= 10;
-  }
-
-  // auto-move while typing (when count >=10)
-  input.addEventListener('input', (e)=>{
-    if(checkValue(e.target.value)){
-      successTransition();
-    }
-  });
-
-  // submit button
-  btn.addEventListener('click', ()=>{
-    const v = input.value || '';
-    if(checkValue(v)){
-      successTransition();
-    } else {
-      // small shake / prompt
-      btn.animate([{transform:'translateY(0)'},{transform:'translateY(-6px)'},{transform:'translateY(0)'}],{duration:250});
-      alert('Innum hugs kudu 🫂 — type 10 or more hugs!');
-    }
-  });
-
-  // also allow Enter key to submit
-  input.addEventListener('keydown',(ev)=>{
-    if(ev.key === 'Enter'){
-      ev.preventDefault();
-      btn.click();
-    }
-  });
-})();
-/* ========= end quiz logic ========= */
-
-</script>
+    setInterval(createParticle, 100);
+    loop();
+  </script>
 </body>
 </html>
