--- a/page5.html
+++ b/page5.html
@@ -24,31 +24,45 @@
       line-height: 1.6;
     }
 
-    /* Cube settings */
+    /* Cube wrapper */
     .slideshow {
       position: absolute;
       top: 55%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 550px;   /* Reduced to avoid cutting */
-      height: 550px;
+      width: 400px;
+      height: 400px;
       perspective: 1200px;
     }
 
-    .slideshow img {
-      position: absolute;
+    .cube {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      backface-visibility: hidden;
-      border-radius: 15px;
-      box-shadow: 0 0 25px rgba(255, 255, 255, 0.6);
-      animation: rotate 30s infinite linear;
+      position: relative;
+      transform-style: preserve-3d;
+      animation: spin 20s infinite linear;
     }
 
-    @keyframes rotate {
-      0% { transform: rotateY(0deg); }
-      100% { transform: rotateY(360deg); }
+    .cube img {
+      position: absolute;
+      width: 400px;
+      height: 400px;
+      object-fit: cover;
+      border-radius: 20px;
+      box-shadow: 0 0 25px rgba(255,255,255,0.6);
+    }
+
+    /* Cube faces */
+    .front  { transform: rotateY(0deg) translateZ(200px); }
+    .back   { transform: rotateY(180deg) translateZ(200px); }
+    .right  { transform: rotateY(90deg) translateZ(200px); }
+    .left   { transform: rotateY(-90deg) translateZ(200px); }
+    .top    { transform: rotateX(90deg) translateZ(200px); }
+    .bottom { transform: rotateX(-90deg) translateZ(200px); }
+
+    @keyframes spin {
+      0%   { transform: rotateX(0deg) rotateY(0deg); }
+      100% { transform: rotateX(360deg) rotateY(360deg); }
     }
 
     /* Floating emojis */
@@ -57,7 +71,6 @@
       font-size: 28px;
       animation: float 10s infinite linear;
     }
-
     @keyframes float {
       0% { transform: translateY(100vh); opacity: 1; }
       100% { transform: translateY(-10vh); opacity: 0; }
@@ -99,7 +112,6 @@
       top: -10px;
       animation: confettiFall 3s linear forwards;
     }
-
     @keyframes confettiFall {
       to { transform: translateY(100vh) rotate(720deg); }
     }
@@ -116,12 +128,14 @@
 
   <!-- Cube slideshow -->
   <div class="slideshow">
-    <img src="F1.jpg" style="animation-delay: 0s;">
-    <img src="F2.jpg" style="animation-delay: 5s;">
-    <img src="F3.jpg" style="animation-delay: 10s;">
-    <img src="F4.jpg" style="animation-delay: 15s;">
-    <img src="F5.jpg" style="animation-delay: 20s;">
-    <img src="F6.jpg" style="animation-delay: 25s;">
+    <div class="cube">
+      <img src="F1.jpg" class="front">
+      <img src="F2.jpg" class="back">
+      <img src="F3.jpg" class="right">
+      <img src="F4.jpg" class="left">
+      <img src="F5.jpg" class="top">
+      <img src="F6.jpg" class="bottom">
+    </div>
   </div>
 
   <!-- Floating emojis -->
