--- a/page5.html
+++ b/page5.html
@@ -2,37 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Special Surprise</title>
+  <title>Page 5 Surprise</title>
   <style>
     body {
       margin: 0;
       height: 100vh;
       background: black;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       overflow: hidden;
+      color: blue;
       font-family: Arial, sans-serif;
-      color: white;
-      text-align: center;
     }
 
-    /* Top text */
+    /* Top bold text */
     .top-text {
-      position: absolute;
-      top: 20px;
-      width: 100%;
-      font-size: 20px;
+      font-size: 36px;
       font-weight: bold;
+      text-align: center;
       line-height: 1.6;
+      margin-bottom: 20px;
     }
 
-    /* Cube wrapper */
-    .slideshow {
-      position: absolute;
-      top: 55%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 400px;
-      height: 400px;
-      perspective: 1200px;
+    /* Cube container fixed */
+    .cube-container {
+      width: 500px;
+      height: 500px;
+      perspective: 2000px;
+      margin-bottom: 40px;
     }
 
     .cube {
@@ -40,94 +39,99 @@
       height: 100%;
       position: relative;
       transform-style: preserve-3d;
-      animation: spin 20s infinite linear;
+      animation: rotateCube 20s infinite linear;
     }
 
     .cube img {
       position: absolute;
-      width: 400px;
-      height: 400px;
+      width: 720px;
+      height: 720px;
       object-fit: cover;
-      border-radius: 20px;
-      box-shadow: 0 0 25px rgba(255,255,255,0.6);
+      backface-visibility: hidden;
     }
 
-    /* Cube faces */
-    .front  { transform: rotateY(0deg) translateZ(200px); }
-    .back   { transform: rotateY(180deg) translateZ(200px); }
-    .right  { transform: rotateY(90deg) translateZ(200px); }
-    .left   { transform: rotateY(-90deg) translateZ(200px); }
-    .top    { transform: rotateX(90deg) translateZ(200px); }
-    .bottom { transform: rotateX(-90deg) translateZ(200px); }
+    .front  { transform: rotateY(0deg) translateZ(360px); }
+    .back   { transform: rotateY(180deg) translateZ(360px); }
+    .right  { transform: rotateY(90deg) translateZ(360px); }
+    .left   { transform: rotateY(-90deg) translateZ(360px); }
+    .top    { transform: rotateX(90deg) translateZ(360px); }
+    .bottom { transform: rotateX(-90deg) translateZ(360px); }
 
-    @keyframes spin {
-      0%   { transform: rotateX(0deg) rotateY(0deg); }
-      100% { transform: rotateX(360deg) rotateY(360deg); }
+    @keyframes rotateCube {
+      from { transform: rotateX(0deg) rotateY(0deg); }
+      to   { transform: rotateX(360deg) rotateY(360deg); }
     }
 
     /* Floating emojis */
     .emoji {
       position: absolute;
-      font-size: 28px;
-      animation: float 10s infinite linear;
-    }
-    @keyframes float {
-      0% { transform: translateY(100vh); opacity: 1; }
-      100% { transform: translateY(-10vh); opacity: 0; }
+      font-size: 40px;
+      animation: floatEmojis 8s linear infinite;
+      top: 100%;
     }
 
-    /* Quiz section */
+    @keyframes floatEmojis {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(-120vh) scale(1.5); opacity: 0; }
+    }
+
+    /* Quiz */
     .quiz {
       position: absolute;
-      bottom: 30px;
-      width: 100%;
+      bottom: 40px;
       text-align: center;
+      width: 100%;
+    }
+
+    .quiz input {
+      padding: 10px;
+      font-size: 18px;
+      border-radius: 8px;
+      border: none;
+      text-align: center;
+    }
+
+    .quiz button {
+      padding: 10px 20px;
+      margin-left: 10px;
       font-size: 18px;
       font-weight: bold;
-    }
-
-    input {
-      padding: 8px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-    }
-
-    button {
-      padding: 8px 15px;
-      font-size: 16px;
       border: none;
       border-radius: 8px;
+      cursor: pointer;
       background: #ff4081;
       color: white;
-      cursor: pointer;
     }
 
-    /* Confetti */
+    /* Fireworks / Confetti */
     .confetti {
-      position: absolute;
-      width: 8px;
-      height: 8px;
-      background: red;
-      top: -10px;
-      animation: confettiFall 3s linear forwards;
+      position: fixed;
+      width: 10px;
+      height: 10px;
+      background: yellow;
+      top: 0;
+      left: 50%;
+      opacity: 0;
+      animation: explode 2s ease-out forwards;
     }
-    @keyframes confettiFall {
-      to { transform: translateY(100vh) rotate(720deg); }
+
+    @keyframes explode {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      100% { transform: translateY(100vh) scale(0.5); opacity: 0; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Top text -->
+  <!-- Top text in 3 lines -->
   <div class="top-text">
     Namma 1st Selfie loosuu😚🙈 <br>
     Always blessed to have you in my Life 🤗 <br>
-    Lov uuu😚 always...
+    Lov uuu😚 always
   </div>
 
-  <!-- Cube slideshow -->
-  <div class="slideshow">
+  <!-- Cube -->
+  <div class="cube-container">
     <div class="cube">
       <img src="F1.jpg" class="front">
       <img src="F2.jpg" class="back">
@@ -138,69 +142,54 @@
     </div>
   </div>
 
-  <!-- Floating emojis -->
-  <div id="emojis"></div>
-
   <!-- Quiz -->
   <div class="quiz">
-    <p>Next page ku porathukku unnoda loosu ku more than 10 hug kudu🫂</p>
+    <p style="font-size:20px; font-weight:bold;">
+      Next page ku porathukku unnoda loosu ku more than 10 hug kudu 🫂
+    </p>
     <input type="text" id="answer" placeholder="Type here...">
     <button onclick="checkAnswer()">Submit</button>
   </div>
 
-  <!-- Background music -->
-  <audio autoplay loop>
-    <source src="First.mp3" type="audio/mpeg">
-  </audio>
+  <!-- Floating emojis -->
+  <div id="emoji-container"></div>
+
+  <!-- Background song -->
+  <audio id="bg-music" src="First.mp3" autoplay loop></audio>
 
   <script>
-    // Floating emojis
-    const emojis = ["💙","🤗","😚","🫂","💎","❤️‍🩹","🙈"];
+    // Floating emojis generator
+    const emojis = ["🙈","😚","💎","🤗","🫂","❤️‍🩹"];
     function createEmoji() {
       const emoji = document.createElement("div");
       emoji.className = "emoji";
       emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
-      emoji.style.left = Math.random() * window.innerWidth + "px";
-      emoji.style.top = "100vh";
-      emoji.style.fontSize = (20 + Math.random() * 20) + "px";
-      emoji.style.animationDuration = (5 + Math.random() * 5) + "s";
-      document.getElementById("emojis").appendChild(emoji);
+      emoji.style.left = Math.random() * 100 + "vw";
+      emoji.style.animationDuration = (6 + Math.random() * 5) + "s";
+      document.getElementById("emoji-container").appendChild(emoji);
       setTimeout(() => emoji.remove(), 10000);
     }
     setInterval(createEmoji, 500);
 
-    // Quiz check
+    // Quiz answer check
     function checkAnswer() {
       const ans = document.getElementById("answer").value.trim();
-      const correct = "🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂";
-      if (ans === correct) {
-        for (let i = 0; i < 100; i++) {
+      if (ans === "🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂") {
+        for (let i = 0; i < 50; i++) {
           const confetti = document.createElement("div");
           confetti.className = "confetti";
-          confetti.style.left = Math.random() * window.innerWidth + "px";
-          confetti.style.backgroundColor = `hsl(${Math.random() * 360},100%,50%)`;
+          confetti.style.left = Math.random() * 100 + "vw";
+          confetti.style.background = `hsl(${Math.random()*360},100%,50%)`;
           document.body.appendChild(confetti);
-          setTimeout(() => confetti.remove(), 3000);
+          setTimeout(() => confetti.remove(), 2000);
         }
         setTimeout(() => {
-          window.location.href = "nextpage.html";
-        }, 3500);
+          window.location.href = "page6.html"; // auto move next
+        }, 2500);
       } else {
-        alert("Try again! Hint: Give 10 hugs 🫂🫂...");
+        alert("Wrong! Try again 🫂");
       }
     }
-
-    // Fireworks on page load
-    window.onload = () => {
-      for (let i = 0; i < 60; i++) {
-        const confetti = document.createElement("div");
-        confetti.className = "confetti";
-        confetti.style.left = Math.random() * window.innerWidth + "px";
-        confetti.style.backgroundColor = `hsl(${Math.random() * 360},100%,50%)`;
-        document.body.appendChild(confetti);
-        setTimeout(() => confetti.remove(), 3000);
-      }
-    };
   </script>
 </body>
 </html>
