--- a/page5.html
+++ b/page5.html
@@ -10,10 +10,10 @@
       background: black;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: top;
       align-items: center;
       overflow: hidden;
-      color: blue;
+      color: white;
       font-family: Arial, sans-serif;
     }
 
@@ -28,8 +28,8 @@
 
     /* Cube container fixed */
     .cube-container {
-      width: 500px;
-      height: 500px;
+      width: 450px;
+      height: 450px;
       perspective: 2000px;
       margin-bottom: 40px;
     }
@@ -94,7 +94,7 @@
     .quiz button {
       padding: 10px 20px;
       margin-left: 10px;
-      font-size: 18px;
+      font-size: 24px;
       font-weight: bold;
       border: none;
       border-radius: 8px;
