--- a/page5.html
+++ b/page5.html
@@ -10,7 +10,7 @@
       background: black;
       display: flex;
       flex-direction: column;
-      justify-content: top;
+      justify-content: center;
       align-items: center;
       overflow: hidden;
       color: white;
@@ -23,29 +23,29 @@
       font-weight: bold;
       text-align: center;
       line-height: 1.6;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
-    /* Cube container fixed */
-    .cube-container {
+    /* Cube stays fixed center */
+    .scene {
       width: 450px;
       height: 450px;
       perspective: 2000px;
-      margin-bottom: 40px;
     }
 
     .cube {
-      width: 100%;
-      height: 100%;
+      width: 450px;
+      height: 450px;
       position: relative;
       transform-style: preserve-3d;
-      animation: rotateCube 20s infinite linear;
+      animation: rotateCube 25s linear infinite;
+      margin: auto;
     }
 
     .cube img {
       position: absolute;
-      width: 720px;
-      height: 720px;
+      width: 450px;
+      height: 450px;
       object-fit: cover;
       backface-visibility: hidden;
     }
@@ -77,10 +77,15 @@
 
     /* Quiz */
     .quiz {
-      position: absolute;
-      bottom: 40px;
+      margin-top: 25px;
       text-align: center;
       width: 100%;
+    }
+
+    .quiz p {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
 
     .quiz input {
@@ -94,7 +99,7 @@
     .quiz button {
       padding: 10px 20px;
       margin-left: 10px;
-      font-size: 24px;
+      font-size: 18px;
       font-weight: bold;
       border: none;
       border-radius: 8px;
@@ -131,7 +136,7 @@
   </div>
 
   <!-- Cube -->
-  <div class="cube-container">
+  <div class="scene">
     <div class="cube">
       <img src="F1.jpg" class="front">
       <img src="F2.jpg" class="back">
@@ -144,9 +149,7 @@
 
   <!-- Quiz -->
   <div class="quiz">
-    <p style="font-size:20px; font-weight:bold;">
-      Next page ku porathukku unnoda loosu ku more than 10 hug kudu 🫂
-    </p>
+    <p>Next page ku porathukku unnoda loosu ku more than 10 hug kudu 🫂</p>
     <input type="text" id="answer" placeholder="Type here...">
     <button onclick="checkAnswer()">Submit</button>
   </div>
