--- a/page5.html
+++ b/page5.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+50<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -21,7 +21,7 @@
     .top-text {
       font-size: 36px;
       font-weight: bold;
-      text-align: center;
+      text-align: top;
       line-height: 1.6;
       margin-bottom: 15px;
     }
@@ -78,7 +78,7 @@
     /* Quiz */
     .quiz {
       margin-top: 25px;
-      text-align: center;
+      text-align: bottom;
       width: 100%;
     }
 
@@ -93,7 +93,7 @@
       font-size: 18px;
       border-radius: 8px;
       border: none;
-      text-align: center;
+      text-align: bottom;
     }
 
     .quiz button {
