--- a/page5.html
+++ b/page5.html
@@ -20,7 +20,7 @@
 
     /* Top text */
     .top-text {
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
       text-align: center;
       margin-top: 20px;
@@ -32,7 +32,7 @@
     .scene {
       width: 450px;
       height: 450px;
-      perspective: 1200px;
+      perspective: 1500px;
       margin-top: 20px;
     }
 
@@ -53,6 +53,7 @@
       background-position: center;
     }
 
+    /* Cube faces */
     .cube-face.front  { transform: rotateY(0deg) translateZ(225px); }
     .cube-face.back   { transform: rotateY(180deg) translateZ(225px); }
     .cube-face.right  { transform: rotateY(90deg) translateZ(225px); }
@@ -102,13 +103,24 @@
       0%   { transform: translateY(100vh) scale(1); opacity: 1; }
       100% { transform: translateY(-120vh) scale(1.5); opacity: 0; }
     }
+
+    /* Fireworks canvas */
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 5;
+    }
   </style>
 </head>
 <body>
 
   <!-- Song -->
   <audio autoplay loop>
-    <source src="song.mp3" type="audio/mpeg">
+    <source src="First.mp3" type="audio/mpeg">
   </audio>
 
   <!-- Top Text -->
@@ -121,12 +133,12 @@
   <!-- Cube -->
   <div class="scene">
     <div class="cube">
-      <div class="cube-face front"  style="background-image: url('1000040195.jpg');"></div>
-      <div class="cube-face back"   style="background-image: url('1000040195.jpg');"></div>
-      <div class="cube-face right"  style="background-image: url('1000040195.jpg');"></div>
-      <div class="cube-face left"   style="background-image: url('1000040195.jpg');"></div>
-      <div class="cube-face top"    style="background-image: url('1000040195.jpg');"></div>
-      <div class="cube-face bottom" style="background-image: url('1000040195.jpg');"></div>
+      <div class="cube-face front"  style="background-image: url('F1.jpg');"></div>
+      <div class="cube-face back"   style="background-image: url('F2.jpg');"></div>
+      <div class="cube-face right"  style="background-image: url('F3.jpg');"></div>
+      <div class="cube-face left"   style="background-image: url('F4.jpg');"></div>
+      <div class="cube-face top"    style="background-image: url('F5.jpg');"></div>
+      <div class="cube-face bottom" style="background-image: url('F6.jpg');"></div>
     </div>
   </div>
 
@@ -137,8 +149,13 @@
     <button>Submit</button>
   </div>
 
-  <!-- Floating Emojis -->
+  <!-- Canvas for Fireworks -->
+  <canvas id="fireworks"></canvas>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   <script>
+    // Floating emojis
     const emojis = ["🙈", "😚", "💎", "🤗", "🫂", "❤️‍🩹"];
     for (let i = 0; i < 20; i++) {
       const emoji = document.createElement("div");
@@ -149,7 +166,77 @@
       emoji.style.fontSize = (24 + Math.random() * 20) + "px";
       document.body.appendChild(emoji);
     }
-  </script>
 
+    // Confetti burst when page loads
+    window.onload = () => {
+      confetti({
+        particleCount: 200,
+        spread: 150,
+        origin: { y: 0.6 }
+      });
+      fireworkEffect();
+    };
+
+    // Fireworks effect
+    const canvas = document.getElementById('fireworks');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    class Firework {
+      constructor(x, y, colors) {
+        this.x = x;
+        this.y = y;
+        this.colors = colors;
+        this.particles = [];
+        for (let i = 0; i < 50; i++) {
+          this.particles.push({
+            x: x,
+            y: y,
+            angle: Math.random() * 2 * Math.PI,
+            speed: Math.random() * 5 + 2,
+            radius: Math.random() * 2 + 1,
+            life: 100
+          });
+        }
+      }
+      draw() {
+        this.particles.forEach(p => {
+          ctx.beginPath();
+          ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+          ctx.fillStyle = this.colors[Math.floor(Math.random() * this.colors.length)];
+          ctx.fill();
+        });
+      }
+      update() {
+        this.particles.forEach(p => {
+          p.x += Math.cos(p.angle) * p.speed;
+          p.y += Math.sin(p.angle) * p.speed;
+          p.life--;
+        });
+      }
+    }
+
+    let fireworks = [];
+    function fireworkEffect() {
+      setInterval(() => {
+        const x = Math.random() * canvas.width;
+        const y = Math.random() * canvas.height / 2;
+        fireworks.push(new Firework(x, y, ["red", "yellow", "blue", "green", "pink", "purple", "orange"]));
+      }, 1200);
+      animate();
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      fireworks.forEach((fw, index) => {
+        fw.update();
+        fw.draw();
+        fw.particles = fw.particles.filter(p => p.life > 0);
+        if (fw.particles.length === 0) fireworks.splice(index, 1);
+      });
+      requestAnimationFrame(animate);
+    }
+  </script>
 </body>
 </html>
