--- a/page5.html
+++ b/page5.html
@@ -7,33 +7,28 @@
     body {
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
       background: #000;
-      overflow: hidden;
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
+      overflow: hidden;
     }
 
-    /* Top text */
+    /* Layout sections */
     .top-text {
-      margin-top: 20px;
       font-weight: bold;
       font-size: 22px;
       line-height: 1.6em;
-      z-index: 2;
+      margin-top: 20px;
+      position: relative;
+      z-index: 5;
     }
 
-    /* Cube container */
     .cube-container {
       perspective: 1200px;
       width: 450px;
       height: 450px;
-      margin: 20px 0;
+      margin: 40px auto; /* center cube, with gap above/below */
     }
 
     .cube {
@@ -41,7 +36,7 @@
       height: 100%;
       position: relative;
       transform-style: preserve-3d;
-      animation: rotate 25s infinite linear; /* slower rotation */
+      animation: rotate 25s infinite linear; /* slow rotation */
     }
 
     .face {
@@ -69,11 +64,10 @@
       to   { transform: rotateX(360deg) rotateY(360deg); }
     }
 
-    /* Quiz section */
     .quiz {
-      margin-top: 20px;
-      margin-bottom: 30px;
-      z-index: 2;
+      margin-top: 30px;
+      position: relative;
+      z-index: 5;
     }
 
     .quiz input {
@@ -98,6 +92,7 @@
       position: absolute;
       font-size: 26px;
       animation: float 8s linear infinite;
+      z-index: 1;
     }
 
     @keyframes float {
@@ -172,13 +167,13 @@
       const correct = "🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂";
       if (ans === correct) {
         alert("Correct! 🎉 Moving to next page...");
-        window.location.href = "nextpage.html"; // change target page
+        window.location.href = "nextpage.html"; // set target page
       } else {
         alert("Oops! Try again 😊");
       }
     }
 
-    // Confetti + fireworks
+    // Confetti
     const canvas = document.getElementById("confetti");
     const ctx = canvas.getContext("2d");
     canvas.width = window.innerWidth;
